2011-04-12  Tony Chang  <tony@chromium.org>

Reviewed by Andreas Kling.

        [Qt] embed checksums in PNGs written by Qt-DRT
        https://bugs.webkit.org/show_bug.cgi?id=58173

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::dump):

Canonical link: https://commits.webkit.org/73379@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83619 268f45cc-cd09-0410-ab3c-d52691b4dbfc